# DRN

./: .env  00-preprocess-data.ipynb  01-train-on-synthetic-data.ipynb  02-train-on-real-data.ipynb  03-train-regularisation-demo.ipynb  04-compile-results-synthetic-data.ipynb  05-compile-results-real-data.ipynb  06-compile-results-regularisation-demo.ipynb  DRN.ipynb  Makefile  README.md  analysis_utils.py  environment.yml  generate_synthetic_dataset.py  hyperparameter_tune.py  hyperparameter_tuning_objectives.py  pyproject.toml  requirements.in  run_all.sh
data/: synth.csv
data/interim/real/: x_test.csv  x_train.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
data/interim/reg/: x_test.csv  x_train.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
data/interim/synth/: x_test.csv  x_train.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
data/processed/real/: x_test.csv  x_train.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
data/processed/reg/: x_test.csv  x_train.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
data/processed/synth/: x_test.csv  x_train.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
data/raw/: reg.csv
